--- a/index.css
+++ b/index.css
@@ -29,3 +29,9 @@ form{
     padding: 15px;
     border: 2px solid black ;
 }
+.g-recaptcha
+{
+    margin-top: 15px;
+    display: flex;
+    justify-content: center;
+}
